# amazon-sales-agent

./: .gitignore  .vercelignore  ENV_SETUP.md  FINAL_IMPLEMENTATION_SUMMARY.md  KEYWORD_ROOT_OPTIMIZATION.md  TASK_1_KEYWORD_CATEGORIZATION_FIX.md  TASK_2_KEYWORDS_INCLUDED_FIX.md  TASK_3_TITLE_OPTIMIZATION_FIX.md  TASK_6_COMPETITOR_TITLE_ANALYSIS.md  TASK_6_UI_BULLET_VOLUME.md  TEST_ENHANCED_ENDPOINT.md  TEST_SETUP.md  TIMEOUT_FIX_SOLUTION.md  UNIVERSAL_KEYWORD_ANALYSIS_RESULTS.md  complete_pipeline_result.json  mvp.MD  setup_env.sh  start_full_stack.sh  start_test_servers.sh  test_api_full_pipeline.py  test_complete_pipeline.py  test_mvp_to_agent.py
backend/: .gitignore  ANTI_BLOCKING_IMPLEMENTATION.md  BACKGROUND_JOBS_FIXES.md  BACKGROUND_JOBS_IMPLEMENTATION.md  CHANGES_ANTI_BLOCKING.md  CHANGES_SUMMARY.md  ENHANCEMENT_BALANCED_CATEGORIZATION.md  FIXES_APPLIED_SUMMARY.md  FIXES_SUMMARY_OCT21.md  HOTFIX_ANTI_BLOCKING_SCRAPY_REACTOR.md  HOTFIX_CATEGORY_TYPO.md  HOTFIX_CORRECT_YELLOW_BADGE_LOGIC.md  HOTFIX_GPT5_MINI_CONVERSATIONAL.md  HOTFIX_INTENT_SCORING_JSON_PARSE.md  HOTFIX_JSON_AND_BULLET_KEYWORDS.md  HOTFIX_JSON_CORRUPTION.md  HOTFIX_JSON_TRUNCATION.md  HOTFIX_KEYWORD_CATEGORIZATION_AGGRESSIVE.md  HOTFIX_KEYWORD_COUNTING_FIX.md  HOTFIX_OPENAI_CONNECTION_RETRY.md  HOTFIX_REQUIREMENT_4_RESTORED.md  HOTFIX_SEPARATE_TITLE_BULLET_COUNTS.md  HOTFIX_STATS_AND_INTENT_PARSING.md  HOTFIX_STATS_STRUCTURE.md  HOTFIX_SUBPROCESS_ERROR_HANDLING.md  HOTFIX_YELLOW_BADGE_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TITLE_DUPLICATE_TRACKING.md  (+53 more)
(+213 files in other folders)
