[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "openai-agents>=0.2.9",
    "scrapy>=2.13.3",
    "upstash-redis>=0.15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[project.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --timeout-keep-alive 18000"
dev = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload --timeout-keep-alive 18000"